# onsvg

./: LICENSE  README.md  pyproject.toml
onsvg/: cli.py  export.py
