[tool.poetry]
name = "onsvg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ezdxf = "^1.2.0"
click = "^8.1.7"
pillow = "^10.3.0"
pymupdf = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
onsvg = "onsvg.cli:cli"
